Fix card click bug by adjusting h3 visibility

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -55,6 +55,9 @@
         transform: translateY(-2rem)
     }
 
+    &:hover>h3 {
+        visibility: hidden;
+    }
 
     &__image:hover {}
 }
